objects/ASI_CRM_HK_Pre_Approval_Form_Customer__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Customer_Parent__c</fullName>
        <formula>ASI_CRM_HK_Customer__r.ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Generate_Price_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Price Set?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pre-Approval Form Customers</relationshipLabel>
        <relationshipName>Pre_Approval_Form_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Download_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Download Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Pre_Approval_Form__c</fullName>
        <label>Pre-Approval Form</label>
        <referenceTo>ASI_HK_CRM_Pre_Approval_Form__c</referenceTo>
        <relationshipLabel>Pre-Approval Form Customers</relationshipLabel>
        <relationshipName>Pre_Approval_Form_Customers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Account_Number__c</fullName>
        <formula>ASI_CRM_HK_Customer__r.ASI_HK_CRM_JDE_Account_Number__c</formula>
        <label>JDE Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PA_DA__c</fullName>
        <formula>if (OR(ISNULL( ASI_CRM_HK_Customer__r.ParentId), ISBLANK(ASI_CRM_HK_Customer__r.ParentId) ), &apos;PA&apos;, &apos;DA&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PA / DA</label>
        <type>Text</type>
    </fields>
    <label>Pre-Approval Form Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_HK_Pre_Approval_Form__c</columns>
        <columns>ASI_CRM_HK_Customer__c</columns>
        <columns>ASI_CRM_PA_DA__c</columns>
        <columns>ASI_CRM_Generate_Price_Set__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PCM-{0000000}</displayFormat>
        <label>Pre-Approval Form Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Approval Form Customers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_HK_Pre_Approval_From_Customer</fullName>
        <active>true</active>
        <label>HK Pre-Approval From Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_Pre_Approval_Form_Customer</fullName>
        <active>true</active>
        <label>ASI CRM TW Pre-Approval Form Customer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>